WIP -- added units endpoint, reworking company name data processing
